--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "standard && next",
+    "dev": "next",
     "build": "next build",
     "start": "next start"
   },
@@ -14,6 +14,7 @@
     "next": "^4.1.4",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-draggable": "^3.0.4",
     "react-ga": "^2.3.5"
   },
   "devDependencies": {
